Update Profile with get Profile via using token
